sandbox/in_arbeit/mpi/fp_mpi.pas

function MPI_Fetch_and_op(origin_addr: pointer; result_addr: pointer; datatype: TMPI_Datatype; target_rank: longint; target_disp: TMPI_Aint;
  op: TMPI_Op; win: TMPI_Win): longint; cdecl; external libmpi;
function MPI_Iexscan(sendbuf: pointer; recvbuf: pointer; count: longint; datatype: TMPI_Datatype; op: TMPI_Op;
  comm: TMPI_Comm; request: PMPI_Request): longint; cdecl; external libmpi;
function MPI_File_c2f(file_: TMPI_File): TMPI_Fint; cdecl; external libmpi;
function MPI_File_f2c(file_: TMPI_Fint): TMPI_File; cdecl; external libmpi;
function MPI_File_call_errhandler(fh: TMPI_File; errorcode: longint): longint; cdecl; external libmpi;
function MPI_File_create_errhandler(_function: PMPI_File_errhandler_function; errhandler: PMPI_Errhandler): longint; cdecl; external libmpi;
function MPI_File_set_errhandler(file_: TMPI_File; errhandler: TMPI_Errhandler): longint; cdecl; external libmpi;
function MPI_File_get_errhandler(file_: TMPI_File; errhandler: PMPI_Errhandler): longint; cdecl; external libmpi;
function MPI_File_open(comm: TMPI_Comm; filename: pchar; amode: longint; info: TMPI_Info; fh: PMPI_File): longint; cdecl; external libmpi;
function MPI_File_close(fh: PMPI_File): longint; cdecl; external libmpi;
function MPI_File_delete(filename: pchar; info: TMPI_Info): longint; cdecl; external libmpi;
function MPI_File_set_size(fh: TMPI_File; size: TMPI_Offset): longint; cdecl; external libmpi;
function MPI_File_preallocate(fh: TMPI_File; size: TMPI_Offset): longint; cdecl; external libmpi;
function MPI_File_get_size(fh: TMPI_File; size: PMPI_Offset): longint; cdecl; external libmpi;
function MPI_File_get_group(fh: TMPI_File; group: PMPI_Group): longint; cdecl; external libmpi;
function MPI_File_get_amode(fh: TMPI_File; amode: Plongint): longint; cdecl; external libmpi;
function MPI_File_set_info(fh: TMPI_File; info: TMPI_Info): longint; cdecl; external libmpi;
function MPI_File_get_info(fh: TMPI_File; info_used: PMPI_Info): longint; cdecl; external libmpi;
function MPI_File_set_view(fh: TMPI_File; disp: TMPI_Offset; etype: TMPI_Datatype; filetype: TMPI_Datatype; datarep: pchar;
  info: TMPI_Info): longint; cdecl; external libmpi;
function MPI_File_get_view(fh: TMPI_File; disp: PMPI_Offset; etype: PMPI_Datatype; filetype: PMPI_Datatype; datarep: pchar): longint; cdecl; external libmpi;
function MPI_File_read_at(fh: TMPI_File; offset: TMPI_Offset; buf: pointer; count: longint; datatype: TMPI_Datatype;
  status: PMPI_Status): longint; cdecl; external libmpi;
function MPI_File_read_at_all(fh: TMPI_File; offset: TMPI_Offset; buf: pointer; count: longint; datatype: TMPI_Datatype;
  status: PMPI_Status): longint; cdecl; external libmpi;
function MPI_File_write_at(fh: TMPI_File; offset: TMPI_Offset; buf: pointer; count: longint; datatype: TMPI_Datatype;
  status: PMPI_Status): longint; cdecl; external libmpi;
function MPI_File_write_at_all(fh: TMPI_File; offset: TMPI_Offset; buf: pointer; count: longint; datatype: TMPI_Datatype;
  status: PMPI_Status): longint; cdecl; external libmpi;
function MPI_File_iread_at(fh: TMPI_File; offset: TMPI_Offset; buf: pointer; count: longint; datatype: TMPI_Datatype;
  request: PMPI_Request): longint; cdecl; external libmpi;
function MPI_File_iwrite_at(fh: TMPI_File; offset: TMPI_Offset; buf: pointer; count: longint; datatype: TMPI_Datatype;
  request: PMPI_Request): longint; cdecl; external libmpi;
function MPI_File_iread_at_all(fh: TMPI_File; offset: TMPI_Offset; buf: pointer; count: longint; datatype: TMPI_Datatype;
  request: PMPI_Request): longint; cdecl; external libmpi;
function MPI_File_iwrite_at_all(fh: TMPI_File; offset: TMPI_Offset; buf: pointer; count: longint; datatype: TMPI_Datatype;
  request: PMPI_Request): longint; cdecl; external libmpi;
function MPI_File_read(fh: TMPI_File; buf: pointer; count: longint; datatype: TMPI_Datatype; status: PMPI_Status): longint; cdecl; external libmpi;
function MPI_File_read_all(fh: TMPI_File; buf: pointer; count: longint; datatype: TMPI_Datatype; status: PMPI_Status): longint; cdecl; external libmpi;
function MPI_File_write(fh: TMPI_File; buf: pointer; count: longint; datatype: TMPI_Datatype; status: PMPI_Status): longint; cdecl; external libmpi;
function MPI_File_write_all(fh: TMPI_File; buf: pointer; count: longint; datatype: TMPI_Datatype; status: PMPI_Status): longint; cdecl; external libmpi;
function MPI_File_iread(fh: TMPI_File; buf: pointer; count: longint; datatype: TMPI_Datatype; request: PMPI_Request): longint; cdecl; external libmpi;
function MPI_File_iwrite(fh: TMPI_File; buf: pointer; count: longint; datatype: TMPI_Datatype; request: PMPI_Request): longint; cdecl; external libmpi;
function MPI_File_iread_all(fh: TMPI_File; buf: pointer; count: longint; datatype: TMPI_Datatype; request: PMPI_Request): longint; cdecl; external libmpi;
function MPI_File_iwrite_all(fh: TMPI_File; buf: pointer; count: longint; datatype: TMPI_Datatype; request: PMPI_Request): longint; cdecl; external libmpi;
function MPI_File_seek(fh: TMPI_File; offset: TMPI_Offset; whence: longint): longint; cdecl; external libmpi;
function MPI_File_get_position(fh: TMPI_File; offset: PMPI_Offset): longint; cdecl; external libmpi;
function MPI_File_get_byte_offset(fh: TMPI_File; offset: TMPI_Offset; disp: PMPI_Offset): longint; cdecl; external libmpi;
function MPI_File_read_shared(fh: TMPI_File; buf: pointer; count: longint; datatype: TMPI_Datatype; status: PMPI_Status): longint; cdecl; external libmpi;
function MPI_File_write_shared(fh: TMPI_File; buf: pointer; count: longint; datatype: TMPI_Datatype; status: PMPI_Status): longint; cdecl; external libmpi;
function MPI_File_iread_shared(fh: TMPI_File; buf: pointer; count: longint; datatype: TMPI_Datatype; request: PMPI_Request): longint; cdecl; external libmpi;
function MPI_File_iwrite_shared(fh: TMPI_File; buf: pointer; count: longint; datatype: TMPI_Datatype; request: PMPI_Request): longint; cdecl; external libmpi;
function MPI_File_read_ordered(fh: TMPI_File; buf: pointer; count: longint; datatype: TMPI_Datatype; status: PMPI_Status): longint; cdecl; external libmpi;
function MPI_File_write_ordered(fh: TMPI_File; buf: pointer; count: longint; datatype: TMPI_Datatype; status: PMPI_Status): longint; cdecl; external libmpi;
function MPI_File_seek_shared(fh: TMPI_File; offset: TMPI_Offset; whence: longint): longint; cdecl; external libmpi;
function MPI_File_get_position_shared(fh: TMPI_File; offset: PMPI_Offset): longint; cdecl; external libmpi;
function MPI_File_read_at_all_begin(fh: TMPI_File; offset: TMPI_Offset; buf: pointer; count: longint; datatype: TMPI_Datatype): longint; cdecl; external libmpi;
function MPI_File_read_at_all_end(fh: TMPI_File; buf: pointer; status: PMPI_Status): longint; cdecl; external libmpi;
function MPI_File_write_at_all_begin(fh: TMPI_File; offset: TMPI_Offset; buf: pointer; count: longint; datatype: TMPI_Datatype): longint; cdecl; external libmpi;
function MPI_File_write_at_all_end(fh: TMPI_File; buf: pointer; status: PMPI_Status): longint; cdecl; external libmpi;
function MPI_File_read_all_begin(fh: TMPI_File; buf: pointer; count: longint; datatype: TMPI_Datatype): longint; cdecl; external libmpi;
function MPI_File_read_all_end(fh: TMPI_File; buf: pointer; status: PMPI_Status): longint; cdecl; external libmpi;
function MPI_File_write_all_begin(fh: TMPI_File; buf: pointer; count: longint; datatype: TMPI_Datatype): longint; cdecl; external libmpi;
function MPI_File_write_all_end(fh: TMPI_File; buf: pointer; status: PMPI_Status): longint; cdecl; external libmpi;
function MPI_File_read_ordered_begin(fh: TMPI_File; buf: pointer; count: longint; datatype: TMPI_Datatype): longint; cdecl; external libmpi;
function MPI_File_read_ordered_end(fh: TMPI_File; buf: pointer; status: PMPI_Status): longint; cdecl; external libmpi;
function MPI_File_write_ordered_begin(fh: TMPI_File; buf: pointer; count: longint; datatype: TMPI_Datatype): longint; cdecl; external libmpi;
function MPI_File_write_ordered_end(fh: TMPI_File; buf: pointer; status: PMPI_Status): longint; cdecl; external libmpi;
function MPI_File_get_type_extent(fh: TMPI_File; datatype: TMPI_Datatype; extent: PMPI_Aint): longint; cdecl; external libmpi;
function MPI_File_set_atomicity(fh: TMPI_File; flag: longint): longint; cdecl; external libmpi;
function MPI_File_get_atomicity(fh: TMPI_File; flag: Plongint): longint; cdecl; external libmpi;
function MPI_File_sync(fh: TMPI_File): longint; cdecl; external libmpi;
function MPI_Finalize: longint; cdecl; external libmpi;
function MPI_Finalized(flag: Plongint): longint; cdecl; external libmpi;
function MPI_Free_mem(base: pointer): longint; cdecl; external libmpi;
function MPI_Gather(sendbuf: pointer; sendcount: longint; sendtype: TMPI_Datatype; recvbuf: pointer; recvcount: longint;
  recvtype: TMPI_Datatype; root: longint; comm: TMPI_Comm): longint; cdecl; external libmpi;
function MPI_Igather(sendbuf: pointer; sendcount: longint; sendtype: TMPI_Datatype; recvbuf: pointer; recvcount: longint;
  recvtype: TMPI_Datatype; root: longint; comm: TMPI_Comm; request: PMPI_Request): longint; cdecl; external libmpi;
function MPI_Gatherv(sendbuf: pointer; sendcount: longint; sendtype: TMPI_Datatype; recvbuf: pointer; recvcounts: Plongint;
  displs: Plongint; recvtype: TMPI_Datatype; root: longint; comm: TMPI_Comm): longint; cdecl; external libmpi;
function MPI_Igatherv(sendbuf: pointer; sendcount: longint; sendtype: TMPI_Datatype; recvbuf: pointer; recvcounts: Plongint;
  displs: Plongint; recvtype: TMPI_Datatype; root: longint; comm: TMPI_Comm; request: PMPI_Request): longint; cdecl; external libmpi;
function MPI_Get_address(location: pointer; address: PMPI_Aint): longint; cdecl; external libmpi;
function MPI_Get_count(status: PMPI_Status; datatype: TMPI_Datatype; count: Plongint): longint; cdecl; external libmpi;
function MPI_Get_elements(status: PMPI_Status; datatype: TMPI_Datatype; count: Plongint): longint; cdecl; external libmpi;
function MPI_Get_elements_x(status: PMPI_Status; datatype: TMPI_Datatype; count: PMPI_Count): longint; cdecl; external libmpi;
function MPI_Get(origin_addr: pointer; origin_count: longint; origin_datatype: TMPI_Datatype; target_rank: longint; target_disp: TMPI_Aint;
  target_count: longint; target_datatype: TMPI_Datatype; win: TMPI_Win): longint; cdecl; external libmpi;
function MPI_Get_accumulate(origin_addr: pointer; origin_count: longint; origin_datatype: TMPI_Datatype; result_addr: pointer; result_count: longint;
  result_datatype: TMPI_Datatype; target_rank: longint; target_disp: TMPI_Aint; target_count: longint; target_datatype: TMPI_Datatype;
  op: TMPI_Op; win: TMPI_Win): longint; cdecl; external libmpi;
function MPI_Get_library_version(version: pchar; resultlen: Plongint): longint; cdecl; external libmpi;
function MPI_Get_processor_name(name: pchar; resultlen: Plongint): longint; cdecl; external libmpi;
function MPI_Get_version(version: Plongint; subversion: Plongint): longint; cdecl; external libmpi;
function MPI_Graph_create(comm_old: TMPI_Comm; nnodes: longint; index: Plongint; edges: Plongint; reorder: longint;
  comm_graph: PMPI_Comm): longint; cdecl; external libmpi;
function MPI_Graph_get(comm: TMPI_Comm; maxindex: longint; maxedges: longint; index: Plongint; edges: Plongint): longint; cdecl; external libmpi;
function MPI_Graph_map(comm: TMPI_Comm; nnodes: longint; index: Plongint; edges: Plongint; newrank: Plongint): longint; cdecl; external libmpi;
function MPI_Graph_neighbors_count(comm: TMPI_Comm; rank: longint; nneighbors: Plongint): longint; cdecl; external libmpi;
function MPI_Graph_neighbors(comm: TMPI_Comm; rank: longint; maxneighbors: longint; neighbors: Plongint): longint; cdecl; external libmpi;
function MPI_Graphdims_get(comm: TMPI_Comm; nnodes: Plongint; nedges: Plongint): longint; cdecl; external libmpi;
function MPI_Grequest_complete(request: TMPI_Request): longint; cdecl; external libmpi;
